<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_pause"
        android:orderInCategory="100"
        android:title="@string/pause"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings"/>
    <item
        android:id="@+id/action_achievements"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/achievements"
        android:visible="false"/>
    <item
        android:id="@+id/action_leaderboard"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/leaderboard"
        android:visible="false"/>
    <item
        android:id="@+id/action_split_count"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/split_count"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/about"/>

</menu>